--- a/TestRailReporter/Podfile
+++ b/TestRailReporter/Podfile
@@ -1,14 +1,14 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '8.0'
+platform :ios, '8.0'
 # Uncomment this line if you're using Swift
 # use_frameworks!
 
-target 'TestRailReporter' do
+target 'SPTestRailReporter' do
 end
 
-target 'TestRailReporterTests' do
-pod 'NSData+Base64', '~> 1.0'
+target 'SPTestRailReporterTests' do
+pod 'NSData+Base64', '1.0.0'
 pod 'AFNetworking', '2.5.4'
-pod 'JSONModel'
+pod 'JSONModel', '1.2.0'
 end
 
