SPTR modified travis .yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
  # file: .travis.yml
+before_install:
+  - sudo gem install cocoapods
+  - brew update
+  - if brew outdated | grep -qx xctool; then brew upgrade xctool; fi
 language: objective-c
 script:
   - xctool -workspace SPTestRailReporter/SPTestRailReporter.xcworkspace -scheme SPTestRailReporter -sdk iphonesimulator
