--- a/SPTestRailReporter/Podfile
+++ b/SPTestRailReporter/Podfile
@@ -1,7 +1,6 @@
 source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
-# Uncomment this line if you're using Swift
-# use_frameworks!
+use_frameworks!
 
 target 'SPTestRailReporter' do
 end
