--- a/SPTestRailReporterExample/SPTestRailReporterExample.xcodeproj/xcshareddata/xcschemes/SPTestRailReporterExample.xcscheme
+++ b/SPTestRailReporterExample/SPTestRailReporterExample.xcodeproj/xcshareddata/xcschemes/SPTestRailReporterExample.xcscheme
@@ -4,8 +4,36 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5A639BDF4F99E9AF6C6491C54CC1F709"
+               BuildableName = "Pods_SPTestRailReporterExample.framework"
+               BlueprintName = "Pods-SPTestRailReporterExample"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2EE21428FF9FB33436F794229839E41D"
+               BuildableName = "Pods_SPTestRailReporterExampleTests.framework"
+               BlueprintName = "Pods-SPTestRailReporterExampleTests"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -20,13 +48,28 @@
                ReferencedContainer = "container:SPTestRailReporterExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6313725A1CA225A500B89E89"
+               BuildableName = "SPTestRailReporterExample.xctest"
+               BlueprintName = "SPTestRailReporterExampleTests"
+               ReferencedContainer = "container:SPTestRailReporterExample.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -54,9 +97,6 @@
                   Identifier = "SPTestRailSectionTests">
                </Test>
                <Test
-                  Identifier = "SPTestRailSuiteTests">
-               </Test>
-               <Test
                   Identifier = "SPTestRailTestAndResultTests">
                </Test>
                <Test
@@ -64,9 +104,6 @@
                </Test>
                <Test
                   Identifier = "SPTestRailTestRunTests">
-               </Test>
-               <Test
-                  Identifier = "SPTestRailUserTests">
                </Test>
             </SkippedTests>
          </TestableReference>
