--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ podfile: SPTestRailReporter/Podfile
 rvm: 2.2.2
 
 before_install:
-  - gem install cocoapods --pre
+  - gem install cocoapods
   - brew update
 
 language: objective-c
