--- a/SPTestRailReporterExample/Podfile
+++ b/SPTestRailReporterExample/Podfile
@@ -2,12 +2,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 use_frameworks!
 
-target 'SPTestRailReporterExample’ do
-end
-
 target 'SPTestRailReporterExampleTests' do
-pod 'NSData+Base64', '1.0.0'
-pod 'AFNetworking', '2.5.4'
-pod 'JSONModel', '1.2.0'
-pod 'SPTestRailReporter', :git => 'https://github.com/SiddarthaPolisetty/SPTestRailReporter.git'
+pod 'SPTestRailReporter', '1.0.0'
 end
